# EasySale

./: .dockerignore  .env.example  .gitignore  AUDIT_SESSION_SUMMARY_2026-01-31.md  AUTH_SETUP_ANALYSIS.md  BUILD_AUDIT_2026-02-01.md  BUILD_FIXES_COMPLETE_2026-02-01.md  BUILD_SYSTEM_COMPLETE_2026-02-01.md  CAPABILITIES_INTEGRATION_COMPLETE_2026-01-31.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPY_TO_PRODUCTION_UPDATE.md  DEMO_VIDEO.md  DEPENDENCY_SECURITY_FIX_2026-02-01.md  DEVLOG.md  DOCKER_BUILD_FIX_2026-02-01.md  DOCUMENTATION_FIXES_2026-01-31.md  Dockerfile.backend  FEATURE_FLAGS_DEEP_AUDIT_2026-01-31.md  FINAL_SESSION_SUMMARY_2026-01-31.md  FRONTEND_TO_BACKEND_PARITY.md  HACKATHON_FIXES.md  LICENSE  OPTIONAL_ENHANCEMENTS_COMPLETE_2026-01-31.md  OUTDATED_CLAIMS_AUDIT_2026-01-31.md  PHASE_1_CAPABILITIES_INTEGRATION_2026-01-31.md  README.md  REPO_REORGANIZATION_COMPLETE.md  SECURITY.md  SESSION_41_SUMMARY_2026-02-01.md  SESSION_COMPLETE_2026-01-31.md  SESSION_COMPLETE_2026-02-01.md  SESSION_COMPLETE_2026-02-01_FINAL.md  SPEC_AUDIT_SUMMARY_2026-01-31.md  START_HERE.md  TAURI_SETUP_GUIDE.md  TYPESCRIPT_FIXES_2026-02-01.md  TYPESCRIPT_FIXES_COMPLETE_2026-02-01.md  audit-fix-plan-complete.md  (+24 more)
backend/: .dockerignore  Cargo.toml  Dockerfile.dev  WORKSPACE_MIGRATION.md  check_latest.txt  check_output.txt  check_output2.txt  clippy_latest.txt  clippy_output.txt  clippy_self.txt  generate-production-secrets.sh
backend/.cargo/: config.toml
backend/.sqlx/: GENERATION_REQUIRED.md  README.md  query-0b5daa8135761f7a8212620cefb701d5a6f1eb4db9860610334e1ab1228ec2ad.json  query-1bb3be5964cbd7e2ac4f2f979969e50a0d962f92c541d09cef27864cb7f54d5d.json  query-1e67acf4a0a47136c0cd975288b870368333a39fba2c8f9a183bd4ea7e5c8098.json  query-20e7d499c3b80b931806456dc0f9d4aafe9bf0a770ce3ae6e7a28631caff2f39.json  query-238dc896238a4d13824c5be8edccb3625727d6162f2d17fca46bd9cd2c526ea4.json  query-28f51ba1e552a51279fdaac8cc466292e1b281ba2ebbe9d30a1a3adeb0d91ec1.json  query-29ccd7f9fd25a2d0c8171c2ee62ff765ed44b2b7e63e5e1558f22cab555494a8.json  query-483a7e88c4a310488befc74ae75a480c58dac34b94993ec8d8563c89aea31ac7.json  query-5d63b6fa3dac33a66e8936059d82a9a846b8249f7fa6c7fa462b473633b88ac8.json  query-5f3f5265ec4aedfd166d374ef20773257176b4ae8b18b3913d00f04c16b3c001.json  query-625454ad8f9fd022ab077fc37fb8fe2d3a7c776b99121fc422f9efe4140a7cf7.json  query-6348a6860b66445e8e095bbed2d7e07efec6a3169540f57388f0ee5a4398deea.json  query-658ee0bef51348b58fccc823bf99083410bf2ee055d31bf48f28a902060e9024.json  query-6ad80a63694a7f869c2f69d46ab84feafad9b1b4c94316039e8de97abb885023.json  query-72ea5b1a138ea666cd4f82e8b0d265ecde3c3c49f477a6ddcdf0ce852e2978bc.json  query-7461904d726536d21bfe24751e39936a19659099979349a763733189f08696c6.json  query-7649df3c03b230f019e378d3cb1e50c16f154d5161229cf84526196c4cacfa84.json  query-8b7d04b0ba9558aefcc04a43dcfe55f78aae8a0f1633c016c134b20d06bba66f.json  query-8e3d117c679633965bbc3ee16cf5de17d2604684ffe36457cf9aacb549a89a8b.json  query-921f767179237beb1e8928a26f2a2b4c157de2a360d890e296a5ca090d7dba47.json  query-a48d3eab90644c1b53755adc91c265398ce323c3122ae0763592a0b4d86b6c4a.json  query-a6f3c7e0be7280193b2da9d3b051e4a3fccb3bcf7a26454433af4bb4b9be0dec.json  query-b25eac50b94819c586709de80a94eb5d3b3c9e1e69451d307b2fe622bac31a36.json  query-ba3f8658ba71f4a1d9a85197d9b04b477d8f0efdab80a50e64555ddc46066faf.json  query-bc6d113f1a80d66af6b4eed36ec9def36422a2f4f140bd67f1c802104d2a365b.json  query-c6407f2860363383980ec8d7fdb797edc944a0919640be8b1f91336951c8c30b.json  query-d040999acf6e9028ffe3dd369c3a5ed8e336ce72a70e0de3e1bb2b705fe0d023.json  query-d0b6b4a317092d44acd30a953b1058ec7096d948f54ecde581e2d0673457e0d2.json  query-d0c39a355943dd476b508eef0fbf72255828dc63c1120369ae77344062370f8c.json  query-e097b73ad2ca8e865cda6ad27e3a847d066e9c5e0dc321347a9489ca53a2c3fc.json  query-eda44f2f67d5a60e82a6164be2eac4f7cf795cb09486e6551795b2a55fff8e77.json  query-f67561e5f80b0668d6e7776b311b8eaad78c4e8dfb1e7ca3c5eb16b318a3ffbc.json  query-fce4d626960fb82d6a5335f1b8e5aadeb95ca2f6ebfc7c702a9234ecc5a1bf8b.json
backend/crates/accounting_snapshots/: Cargo.toml  IMPLEMENTATION.md  README.md
backend/crates/capabilities/: Cargo.toml
backend/crates/csv_export_pack/: Cargo.toml
backend/crates/export_batches/: Cargo.toml
backend/crates/pos_core_domain/: Cargo.toml  IMPLEMENTATION.md  README.md
backend/crates/pos_core_models/: Cargo.toml
backend/crates/pos_core_storage/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
backend/crates/server/: .dockerignore  .env.example  .gitignore  CORE_CRATES_INTEGRATION.md  Cargo.toml  DECIDE_ENDPOINT_IMPLEMENTATION.md  Dockerfile  Dockerfile.dev  README.md  TASK_1.1_IMPLEMENTATION_SUMMARY.md  TASK_1.2_IMPLEMENTATION_SUMMARY.md  WEBSOCKET_IMPLEMENTATION.md  (+5 more)
backend/docs/: discount-calculation-integration.md
backend/migrations/: 003_offline_sync.sql  004_products_and_fitment.sql  005_enhance_user_model.sql  006_add_user_store_station.sql  007_seed_default_admin.sql  009_add_tenant_id.sql  010_add_tenant_id_to_backups.sql  012_product_search_index.sql  013_product_variants_table.sql  015_product_price_history_table.sql  016_product_templates_table.sql  017_vendors_table.sql  018_vendor_bills_table.sql  020_vendor_bill_lines_table.sql  021_create_backups_table.sql  022_vendor_sku_aliases_table.sql  023_performance_indexes.sql  024_vendor_templates_table.sql  026_field_mappings.sql  028_sync_direction_control.sql  032_sync_logs.sql  033_webhook_configs.sql  034_notification_configs.sql  035_settings_table.sql  036_feature_flags_table.sql  037_add_display_name_to_users.sql  039_remove_mock_data.sql  040_theme_preferences.sql  041_settings_registry_keys.sql  042_accounting_tables.sql  043_review_cases_tables.sql  044_sales_transactions_table.sql  045_sales_unique_constraint.sql  045_update_tenant_id_to_default.sql  046_email_logs.sql  046_ocr_jobs_table.sql  047_product_alternate_skus.sql  047_tax_rules.sql  048_cleanup_engine_tables.sql  049_cleanup_outcome_tracking.sql  (+14 more)
backend/scripts/: README.md  migrate_password_hashes.rs  sqlx_check.ps1  sqlx_prepare.ps1
(+2434 files in other folders)
