[package]
name = "accounting_snapshots"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pos_core_models = { path = "../pos_core_models" }
pos_core_storage = { path = "../pos_core_storage" }
pos_core_domain = { path = "../pos_core_domain" }

# Database
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Decimal arithmetic
rust_decimal = "1.33"

# Error handling
thiserror = "1.0"

# Logging
tracing = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1.33"
proptest = { workspace = true }
tempfile = { workspace = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
