[package]
name = "export_batches"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pos_core_models = { path = "../pos_core_models" }
pos_core_storage = { path = "../pos_core_storage" }
accounting_snapshots = { path = "../accounting_snapshots" }

# Database
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Decimal arithmetic
rust_decimal = "1.33"

# Error handling
thiserror = "1.0"

# Async trait support
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# Hashing for config hash
sha2 = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1.33"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
